tests/snapshots/test_uigen_examples__customwidget_common_my_dialog_button_box.snap
---
source: tests/test_uigen_examples.rs
expression: "common::translate_file(\"examples/customwidget/common/MyDialogButtonBox.qml\").unwrap()"
---
<ui version="4.0">
 <class>MyDialogButtonBox</class>
 <widget class="QDialogButtonBox" name="buttonBox">
  <property name="orientation">
   <enum>Qt::Horizontal</enum>
  </property>
  <property name="standardButtons">
   <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
  </property>
 </widget>
</ui>

