tests/snapshots/test_uigen_examples__customwidget_settings_form.snap
---
source: tests/test_uigen_examples.rs
expression: "common::translate_file(\"examples/customwidget/SettingsForm.qml\").unwrap()"
---
<ui version="4.0">
 <class>SettingsForm</class>
 <widget class="QWidget" name="widget">
  <layout class="QFormLayout" name="formLayout">
   <item column="0" row="0">
    <widget class="QLabel" name="label">
     <property name="text">
      <string>Path</string>
     </property>
    </widget>
   </item>
   <item column="1" row="0">
    <layout class="QHBoxLayout" name="hboxLayout">
     <item>
      <widget class="QLineEdit" name="pathEdit">
      </widget>
     </item>
     <item>
      <widget class="QToolButton" name="pathBrowseButton">
       <property name="text">
        <string notr="true">...</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
</ui>

