tests/snapshots/test_uigen_examples__gadget_properties.snap
---
source: tests/test_uigen_examples.rs
expression: "common::translate_file(\"examples/GadgetProperties.qml\").unwrap()"
---
<ui version="4.0">
 <class>GadgetProperties</class>
 <widget class="QWidget">
  <layout class="QVBoxLayout">
   <item>
    <widget class="QLabel">
     <property name="font">
      <font>
       <bold>true</bold>
       <family notr="true">Monospace</family>
       <italic>false</italic>
       <kerning>true</kerning>
       <pointsize>9</pointsize>
       <strikeout>true</strikeout>
       <stylestrategy>PreferDefault</stylestrategy>
       <weight>75</weight>
      </font>
     </property>
     <property name="text">
      <string notr="true">Font properties</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
</ui>

