tests/snapshots/test_uigen_examples__item_views.snap
---
source: tests/test_uigen_examples.rs
expression: "common::translate_file(\"examples/ItemViews.qml\").unwrap()"
---
<ui version="4.0">
 <class>ItemViews</class>
 <widget class="QWidget" name="widget">
  <layout class="QVBoxLayout" name="vboxLayout">
   <item>
    <widget class="QTreeView" name="treeView">
     <attribute name="headerMinimumSectionSize">
      <number>100</number>
     </attribute>
    </widget>
   </item>
   <item>
    <widget class="QTableView" name="tableView">
     <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
      <bool>true</bool>
     </attribute>
     <attribute name="horizontalHeaderStretchLastSection">
      <bool>true</bool>
     </attribute>
     <attribute name="verticalHeaderVisible">
      <bool>false</bool>
     </attribute>
    </widget>
   </item>
  </layout>
 </widget>
</ui>

