tests/snapshots/test_uigen_examples__settings_dialog.snap
---
source: tests/test_uigen_examples.rs
expression: ui_xml
---
<ui version="4.0">
 <class>SettingsDialog</class>
 <widget class="QDialog" name="root">
  <property name="geometry">
   <rect>
    <height>300</height>
    <width>400</width>
    <x>0</x>
    <y>0</y>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Settings</string>
  </property>
  <layout class="QVBoxLayout" name="vboxLayout">
   <item>
    <layout class="QFormLayout" name="formLayout">
     <item column="0" row="0">
      <widget class="QLabel" name="label">
       <property name="text">
        <string>Hg executable:</string>
       </property>
      </widget>
     </item>
     <item column="1" row="0">
      <layout class="QHBoxLayout" name="hboxLayout">
       <item>
        <widget class="QLineEdit" name="hgExecutableEdit">
        </widget>
       </item>
       <item>
        <widget class="QToolButton" name="hgExecutableBrowseButton">
         <property name="text">
          <string>...</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item column="0" row="1">
      <widget class="QLabel" name="label1">
       <property name="text">
        <string>Text font:</string>
       </property>
      </widget>
     </item>
     <item column="1" row="1">
      <layout class="QHBoxLayout" name="hboxLayout1">
       <item>
        <widget class="QFontComboBox" name="textFontFamilyEdit">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QSpinBox" name="textFontSizeEdit">
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
         <property name="maximum">
          <number>999</number>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLabel" name="label2">
         <property name="text">
          <string>pt</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
    </layout>
   </item>
   <item>
    <spacer name="spacerItem">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint">
      <size>
       <height>40</height>
       <width>20</width>
      </size>
     </property>
    </spacer>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
</ui>

