tests/snapshots/test_uigen_examples__static_item_model.snap
---
source: tests/test_uigen_examples.rs
expression: "common::translate_file(\"examples/StaticItemModel.qml\").unwrap()"
---
<ui version="4.0">
 <class>StaticItemModel</class>
 <widget class="QWidget" name="widget">
  <layout class="QFormLayout" name="formLayout">
   <item column="0" row="0">
    <widget class="QLabel" name="label">
     <property name="text">
      <string notr="true">QComboBox</string>
     </property>
    </widget>
   </item>
   <item column="1" row="0">
    <widget class="QComboBox" name="comboBox">
     <property name="currentIndex">
      <number>1</number>
     </property>
     <item>
      <property name="text">
       <string>Foo</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>Bar</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>Baz</string>
      </property>
     </item>
    </widget>
   </item>
   <item column="0" row="1">
    <widget class="QLabel" name="label1">
     <property name="text">
      <string notr="true">QListWidget</string>
     </property>
    </widget>
   </item>
   <item column="1" row="1">
    <widget class="QListWidget" name="listWidget">
     <item>
      <property name="text">
       <string>Foo</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>Bar</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>Baz</string>
      </property>
     </item>
    </widget>
   </item>
  </layout>
 </widget>
</ui>

