tests/snapshots/test_uigen_examples__various_layouts.snap
---
source: tests/test_uigen_examples.rs
expression: "common::translate_file(\"examples/VariousLayouts.qml\").unwrap()"
---
<ui version="4.0">
 <class>VariousLayouts</class>
 <widget class="QWidget" name="widget">
  <property name="geometry">
   <rect>
    <height>300</height>
    <width>400</width>
    <x>0</x>
    <y>0</y>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Various Layouts</string>
  </property>
  <layout class="QFormLayout" name="formLayout">
   <item column="0" row="0">
    <widget class="QLabel" name="verticalLabel">
     <property name="text">
      <string>Vertical</string>
     </property>
    </widget>
   </item>
   <item column="1" row="0">
    <layout class="QVBoxLayout" name="verticalLayout">
     <property name="bottomMargin">
      <number>4</number>
     </property>
     <property name="leftMargin">
      <number>1</number>
     </property>
     <property name="rightMargin">
      <number>3</number>
     </property>
     <property name="spacing">
      <number>4</number>
     </property>
     <property name="topMargin">
      <number>2</number>
     </property>
     <item>
      <widget class="QRadioButton" name="radioButton">
       <property name="text">
        <string>RadioButton</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QRadioButton" name="radioButton_2">
       <property name="text">
        <string>RadioButton</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QCheckBox" name="checkBox">
       <property name="text">
        <string>CheckBox</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item column="0" row="1">
    <widget class="QLabel" name="horizontalLabel">
     <property name="text">
      <string>Horizontal</string>
     </property>
    </widget>
   </item>
   <item column="1" row="1">
    <layout class="QHBoxLayout" name="horizontalLayout" stretch="2,3">
     <item>
      <widget class="QPlainTextEdit" name="plainTextEdit">
      </widget>
     </item>
     <item>
      <widget class="QPlainTextEdit" name="plainTextEdit_2">
      </widget>
     </item>
    </layout>
   </item>
   <item column="0" row="2">
    <widget class="QLabel" name="gridLabel">
     <property name="text">
      <string>Grid</string>
     </property>
    </widget>
   </item>
   <item column="1" row="2">
    <layout class="QGridLayout" name="gridLayout" columnminimumwidth="50,50,50" columnstretch="3,4,5" rowminimumheight="20,0,20" rowstretch="1,2">
     <property name="bottomMargin">
      <number>2</number>
     </property>
     <property name="horizontalSpacing">
      <number>10</number>
     </property>
     <property name="leftMargin">
      <number>2</number>
     </property>
     <property name="rightMargin">
      <number>2</number>
     </property>
     <property name="sizeConstraint">
      <enum>QLayout::SetFixedSize</enum>
     </property>
     <property name="topMargin">
      <number>2</number>
     </property>
     <property name="verticalSpacing">
      <number>4</number>
     </property>
     <item column="0" row="0">
      <widget class="QPushButton" name="pushButton">
       <property name="text">
        <string>PushButton</string>
       </property>
      </widget>
     </item>
     <item column="0" row="1">
      <widget class="QPushButton" name="pushButton_2">
       <property name="text">
        <string>PushButton</string>
       </property>
      </widget>
     </item>
     <item alignment="Qt::AlignTop" column="1" row="0" rowspan="2">
      <widget class="QPushButton" name="pushButton_3">
       <property name="text">
        <string>RowSpan
Button</string>
       </property>
      </widget>
     </item>
     <item column="2" row="0">
      <widget class="QPushButton" name="pushButton_4">
       <property name="text">
        <string>PushButton</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
</ui>

